# pick_action

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_CONTROL.md  package.xml  setup.py
action/: PickSequence.action
config/: recognition.yaml
launch/: pick_action.launch.py
pick_action/: core.py  pick_action_server.py  recognition_node.py  trigger_pick.py
scripts/: correct_pose.py  pick_action_server_node  recognition_node  synthetic_scan_node  trigger_pick.py
src/ares_tool_interfaces/: CMakeLists.txt  package.xml
src/ldlidar_stl_ros2/: .gitignore
src/ldlidar_stl_ros2/launch/: stl27l.launch.py  viewer_stl27l.launch.py
src/ldlidar_stl_ros2/ldlidar_driver/include/logger/: log_module.h
src/ldlidar_stl_ros2/ldlidar_driver/include/serialcom/: serial_interface_linux.h
src/ldlidar_stl_ros2/ldlidar_driver/src/logger/: log_module.cpp
src/ldlidar_stl_ros2/rviz2/: ldlidar.rviz
src/pick_action/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/pick_action/config/: odin_sensor_projection.yaml  pick_action.yaml
src/pick_action/launch/: pick_action.launch.py
src/pick_action/pick_action/: __init__.py  pick_action_server.py  pose_alignment.py  sensor_scan_debug_cli.py  synthetic_scan_node.py  temporal_recognition.py  test_lift.py  trigger_pick.py
src/pick_action/scripts/: pick_action_server_node
src/pick_action_interfaces/: CMakeLists.txt  package.xml
srv/: ToolAction.srv
