<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_action</name>
  <version>0.1.0</version>
  <description>LiDAR-based autonomous pick sequence action: align X, approach, grasp, lift, retreat, lower.</description>
  <maintainer email="charlie@example.com">charlie</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>
  <depend>ares_tool_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
